@@ -3,20 +3,27 @@ package de.dlr.ivf.tapas.choice;
 import de.dlr.ivf.tapas.logger.legacy.HierarchyLogLevel;
 import de.dlr.ivf.tapas.logger.legacy.SeverityLogLevel;
 import de.dlr.ivf.tapas.logger.legacy.TPS_Logger;
+import de.dlr.ivf.tapas.mode.CostCalculator;
+import de.dlr.ivf.tapas.mode.cost.MNLFullComplexContext;
 import de.dlr.ivf.tapas.model.TPS_AttributeReader;
+import de.dlr.ivf.tapas.model.TPS_Geometrics;
 import de.dlr.ivf.tapas.model.constants.TPS_ActivityConstant;
 import de.dlr.ivf.tapas.model.constants.TPS_DrivingLicenseInformation;
 import de.dlr.ivf.tapas.model.location.TPS_Location;
+import de.dlr.ivf.tapas.model.location.TPS_TrafficAnalysisZone;
 import de.dlr.ivf.tapas.model.mode.TPS_ExtMode;
+import de.dlr.ivf.tapas.model.mode.TPS_Mode;
 import de.dlr.ivf.tapas.model.parameter.ParamFlag;
 import de.dlr.ivf.tapas.model.parameter.ParamValue;
 import de.dlr.ivf.tapas.model.parameter.TPS_ParameterClass;
+import de.dlr.ivf.tapas.model.plan.TPS_PlannedTrip;
 import de.dlr.ivf.tapas.model.scheme.*;
 import de.dlr.ivf.tapas.model.vehicle.CarController;
 import de.dlr.ivf.tapas.model.plan.TPS_LocatedStay;
 import de.dlr.ivf.tapas.model.plan.TPS_Plan;
 import de.dlr.ivf.tapas.model.plan.TPS_PlanningContext;
 import de.dlr.ivf.tapas.model.vehicle.TPS_Car;
+import lombok.Getter;
 
 import java.util.List;
 import java.util.function.Supplier;
@@ -30,12 +37,20 @@ public class LocationAndModeChooser {
     private final TPS_ParameterClass parameterClass;
     private final boolean useShoppingMotives;
     private final boolean useFixLocs;
+    @Getter
     private final LocationSelector locationSelector;
     private final ModeSelector modeSelector;
     private final int automaticVehicleMinDriverAge;
     private final int automaticVehicleLevel;
+    private final TravelDistanceCalculator distanceCalculator;
 
-    public LocationAndModeChooser(TPS_ParameterClass parameterClass, LocationSelector locationSelector, ModeSelector modeSelector) {
+    private final TravelTimeCalculator travelTimeCalculator;
+
+    private final CostCalculator costCalculator;
+
+    public LocationAndModeChooser(TPS_ParameterClass parameterClass, LocationSelector locationSelector, ModeSelector modeSelector,
+                                  TravelDistanceCalculator distanceCalculator, TravelTimeCalculator travelTimeCalculator,
+                                  CostCalculator costCalculator) {
         this.parameterClass = parameterClass;
         this.useShoppingMotives = parameterClass.isTrue(ParamFlag.FLAG_USE_SHOPPING_MOTIVES);
         this.useFixLocs = parameterClass.isTrue(ParamFlag.FLAG_USE_FIXED_LOCS_ON_BASE);
@@ -43,6 +58,9 @@ public class LocationAndModeChooser {
         this.modeSelector = modeSelector;
         this.automaticVehicleMinDriverAge = parameterClass.getIntValue(ParamValue.AUTOMATIC_VEHICLE_MIN_DRIVER_AGE);
         this.automaticVehicleLevel = parameterClass.getIntValue(ParamValue.AUTOMATIC_VEHICLE_LEVEL);
+        this.distanceCalculator = distanceCalculator;
+        this.travelTimeCalculator = travelTimeCalculator;
+        this.costCalculator = costCalculator;
     }
 
     /**
@@ -67,7 +85,7 @@ public class LocationAndModeChooser {
 
                     List<CarController> availableCars = plan.getPerson().getHousehold().getCarFleetManager().getAvailableCarsNonRestrictedFirst((int) tourpart.getOriginalSchemePartStart(), carUsageDuration);
 
-                    CarController tmpCar = availableCars.isEmpty() ? null : availableCars.get(0);
+                    CarController tmpCar = availableCars.isEmpty() ? null : availableCars.getFirst();
                     if (tmpCar != null) {
                         if (pc.getPerson().mayDriveACar(tmpCar.getCar(), automaticVehicleMinDriverAge, automaticVehicleLevel)) {
                             pc.carForThisPlan = tmpCar.getCar(); // this person can use this car
@@ -91,6 +109,8 @@ public class LocationAndModeChooser {
                 } else {
                     pc.addAttribute(TPS_AttributeReader.TPS_Attribute.HOUSEHOLD_CARS, pc.numHouseholdCars());
                 }
+
+                MNLFullComplexContext mnlContext = new MNLFullComplexContext(plan.getPerson(),tourpart);
 
                 for (TPS_Stay stay : tourpart.getPriorisedStayIterable()) {
                     plan.getAttributes().put(TPS_AttributeReader.TPS_Attribute.CURRENT_EPISODE_ACTIVITY_CODE_TAPAS,
@@ -151,42 +171,21 @@ public class LocationAndModeChooser {
                         if (currentLocatedStay.getLocation() == null) {
                             TPS_Logger.log(SeverityLogLevel.ERROR, "No Location found!");
                         }
-                        if (TPS_Logger.isLogging(SeverityLogLevel.DEBUG)) {
-                            String s = "gewählte Location zu Stay: " + currentLocatedStay.getEpisode().getId() + ": " +
-                                    currentLocatedStay.getLocation().getId() + " in TAZ:" +
-                                    currentLocatedStay.getLocation().getTrafficAnalysisZone().getTAZId() + " in block: " +
-                                    (currentLocatedStay.getLocation().hasBlock() ? currentLocatedStay.getLocation()
-                                            .getBlock()
-                                            .getId() : -1) +
-                                    " via" + currentLocatedStay.getModeArr().getName() + "/" +
-                                    currentLocatedStay.getModeDep().getName();
-                            TPS_Logger.log(SeverityLogLevel.DEBUG, s);
-                            TPS_Logger.log(SeverityLogLevel.DEBUG,
-                                    "Selected location (id=" + currentLocatedStay.getLocation().getId() +
-                                            ") for stay (id=" + currentLocatedStay.getEpisode().getId() + " in TAZ (id=" +
-                                            currentLocatedStay.getLocation().getTrafficAnalysisZone().getTAZId() +
-                                            ") in block (id= " +
-                                            (currentLocatedStay.getLocation().hasBlock() ? currentLocatedStay.getLocation()
-                                                    .getBlock()
-                                                    .getId() : -1) +
-                                            ") via modes " + currentLocatedStay.getModeArr().getName() + "/" +
-                                            currentLocatedStay.getModeDep().getName());
-                        }
                     }
                     // fetch previous and next stay
                     TPS_Stay prevStay = tourpart.getStayHierarchy(stay).getPrevStay();
                     Supplier<TPS_Stay> prevStaySupplier = () -> tourpart.getStayHierarchy(stay).getPrevStay();
                     TPS_Stay goingTo = tourpart.getStayHierarchy(stay).getNextStay();
                     Supplier<TPS_Stay> goingToSupplier = () -> tourpart.getStayHierarchy(stay).getNextStay();
+
+                    TPS_Mode chosenMode;
                     if (currentLocatedStay.getModeArr() == null || currentLocatedStay.getModeDep() == null) {
-                        if (TPS_Logger.isLogging(SeverityLogLevel.FINE)) {
-                            TPS_Logger.log(SeverityLogLevel.FINE,
-                                    "Start select mode for each stay in tour part (id=" + tourpart.getId() + ")");
-                        }
+
                         //do we have a fixed mode from the previous trip?
                         if (tourpart.isFixedModeUsed()) {
                             currentLocatedStay.setModeArr(tourpart.getUsedMode());
                             currentLocatedStay.setModeDep(tourpart.getUsedMode());
+                            chosenMode = tourpart.getUsedMode().primary;
                         } else {
                             TPS_Location pLocGoingTo = plan.getLocatedStay(goingTo).getLocation();
                             TPS_Car tmpCar = pc.carForThisPlan;
@@ -195,7 +194,8 @@ public class LocationAndModeChooser {
                                             pLocGoingTo.getTrafficAnalysisZone().isRestricted())) {
                                 pc.carForThisPlan = null;
                             }
-                            this.modeSelector.selectMode(plan, prevStaySupplier, currentLocatedStay, goingToSupplier, pc);
+                            double distanceNet = distanceCalculator.getDistance(pLocComingFrom, pLocGoingTo, TPS_Mode.ModeType.WALK)
+                            chosenMode = this.modeSelector.selectMode(plan, prevStaySupplier, currentLocatedStay, goingToSupplier, pc);
                             pc.carForThisPlan = tmpCar;
                             //set the mode and car (if used)
                             tourpart.setUsedMode(currentLocatedStay.getModeDep(), pc.carForThisPlan);
@@ -219,41 +219,57 @@ public class LocationAndModeChooser {
                             plan.getAttributes().put(TPS_AttributeReader.TPS_Attribute.PERSON_HAS_BIKE, pc.isBikeAvailable ? 1 : 0);
                         }
                     }
-                    if (TPS_Logger.isLogging(SeverityLogLevel.DEBUG)) {
-                        String s = "Chosen mode of Stay: " + currentLocatedStay.getEpisode().getId() + ": " +
-                                currentLocatedStay.getModeArr() == null ? "NULL" :
-                                currentLocatedStay.getModeArr().getName() + " in TAZ:" +
-                                        currentLocatedStay.getLocation().getTrafficAnalysisZone().getTAZId() +
-                                        " in block: " +
-                                        (currentLocatedStay.getLocation().hasBlock() ? currentLocatedStay.getLocation()
-                                                .getBlock()
-                                                .getId() : -1) +
-                                        " via" + currentLocatedStay.getModeArr().getName() + "/" +
-                                        currentLocatedStay.getModeDep().getName();
-                        TPS_Logger.log(SeverityLogLevel.DEBUG, s);
-                        TPS_Logger.log(SeverityLogLevel.DEBUG,
-                                "Selected mode (id=" + currentLocatedStay.getModeArr() == null ? "NULL" :
-                                        currentLocatedStay.getModeArr().getName() + ") for stay (id=" +
-                                                currentLocatedStay.getEpisode().getId() + " in TAZ (id=" +
-                                                currentLocatedStay.getLocation().getTrafficAnalysisZone().getTAZId() +
-                                                ") in block (id= " + (currentLocatedStay.getLocation()
-                                                .hasBlock() ? currentLocatedStay.getLocation()
-                                                .getBlock()
-                                                .getId() : -1) +
-                                                ") via modes " + currentLocatedStay.getModeArr().getName() + "/" +
-                                                currentLocatedStay.getModeDep().getName());
-                    }
+
+                    TPS_LocatedStay pComingFrom;
+                    TPS_LocatedStay pGoingTo;
+                    TPS_Location pLocComingFrom;
+                    TPS_Location pLocGoingTo;
+                    TPS_PlannedTrip plannedTrip;
+                    TPS_TrafficAnalysisZone comingFromTaz;
+                    TPS_TrafficAnalysisZone goingToTaz;
 
                     //set travel time for the arriving mode
                     if (!tourpart.isFirst(stay)) {
-                        plan.getPlannedTrip(tourpart.getPreviousTrip(stay)).setTravelTime(plan.getLocatedStay(prevStay),
-                                plan.getLocatedStay(stay));
+                        pComingFrom = plan.getLocatedStay(prevStay);
+                        pGoingTo = plan.getLocatedStay(stay);
+                        pLocComingFrom = pComingFrom.getLocation();
+                        pLocGoingTo = pGoingTo.getLocation();
+                        plannedTrip =  plan.getPlannedTrip(tourpart.getPreviousTrip(stay));
+                        comingFromTaz = pLocComingFrom.getTrafficAnalysisZone();
+                        goingToTaz = pLocGoingTo.getTrafficAnalysisZone();
+
+                        plannedTrip.setDistanceEmptyNet(distanceCalculator.getDistance(pLocComingFrom, pLocGoingTo, TPS_Mode.ModeType.WALK));
+                        plannedTrip.setDistanceBeeline(TPS_Geometrics.getDistance(pLocComingFrom, pLocGoingTo, parameterClass.getDoubleValue(ParamValue.MIN_DIST)));
+                        plannedTrip.setTravelTime(pComingFrom,pGoingTo);
+
+                        TPS_Mode mode = plannedTrip.getMode().primary;
+                        double tripDuration = travelTimeCalculator.getTravelTime(
+                                mode, pLocComingFrom, pLocGoingTo, plannedTrip.getStart(),
+                                pComingFrom.getStay().getActCode(), pGoingTo.getStay().getActCode(),
+                                plan.getPerson(), tourpart.getCar());
+
+                        plannedTrip.setDuration((int) tripDuration);
+                        plannedTrip.setCost(costCalculator.calculateCost(goingToTaz,comingFromTaz,tripDuration,));
                     }
                     //set travel time for the departure mode
                     if (!tourpart.isLast(stay)) {
-                        plan.getPlannedTrip(tourpart.getNextTrip(stay)).setTravelTime(plan.getLocatedStay(stay),
-                                plan.getLocatedStay(goingTo));
+                        pComingFrom = plan.getLocatedStay(stay);
+                        pGoingTo = plan.getLocatedStay(goingTo);
+                        pLocComingFrom = pComingFrom.getLocation();
+                        pLocGoingTo = pGoingTo.getLocation();
+                        plannedTrip = plan.getPlannedTrip(tourpart.getNextTrip(stay));
+
+                        plannedTrip.setDistanceEmptyNet(distanceCalculator.getDistance(pLocComingFrom, pLocGoingTo, TPS_Mode.ModeType.WALK));
+                        plannedTrip.setDistanceBeeline(TPS_Geometrics.getDistance(pLocComingFrom, pLocGoingTo, parameterClass.getDoubleValue(ParamValue.MIN_DIST)));
+                        plannedTrip.setTravelTime(pComingFrom,pGoingTo);
+
+                        TPS_Mode mode = plannedTrip.getMode().primary;
+                        plannedTrip.setDuration((int) travelTimeCalculator
+                                .getTravelTime(mode, pLocComingFrom, pLocGoingTo, plannedTrip.getStart(),
+                                        pComingFrom.getStay().getActCode(), pGoingTo.getStay().getActCode(),
+                                        plan.getPerson(), tourpart.getCar()));
                     }
+
                     //update the travel durations for this plan
                     tourpart.updateActualTravelDurations(plan);
                     plan.getAttributes().put(TPS_AttributeReader.TPS_Attribute.CURRENT_TAZ_SETTLEMENT_CODE_TAPAS,
@@ -277,9 +293,9 @@ public class LocationAndModeChooser {
             if (prevLocatedStay != null) { // not for the first stay, which starts at home
                 if (locatedStay.isLocated() && prevLocatedStay.isLocated()) {
                     if (locatedStay.getLocation().isSameLocationGroup(prevLocatedStay.getLocation())) {
-//                        //todo need a fix
-//                        prevLocatedStay.setModeDep(TPS_ExtMode.simpleWalk);
-//                        locatedStay.setModeArr(TPS_ExtMode.simpleWalk);
+                        TPS_ExtMode modeWalk = new TPS_ExtMode(modeSelector.getModes().getModeByName(TPS_Mode.ModeType.WALK.name()),null);
+                        prevLocatedStay.setModeDep(modeWalk);
+                        locatedStay.setModeArr(modeWalk);
                     }
                 } else {
                     if (TPS_Logger.isLogging(SeverityLogLevel.WARN)) {
